[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
solana-sdk = ">=1.14, <=1.17"
solana-client = ">=1.14, <=1.17"
solana-account-decoder = ">=1.14, <=1.17"
solana-transaction-status = ">=1.14, <=1.17"
spl-token = { version = "4.0.0", features=["no-entrypoint"] }
spl-token-client = "0.7.0"
spl-memo = "4.0.0"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }
position = { path = "../programs/position", features = ["no-entrypoint"] }
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-clmm.git", features = ["no-entrypoint", "client"] }
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.15.4", features = ["toml"] }
anyhow = "1.0.95"
serde = "1.0.216"
tokio = { version = "1.42.0", features = ["full"] }
