[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "=0.30.1"
anchor-spl = "=0.30.1"
orca_whirlpools_client = "1.0.0"
spl-associated-token-account = { version = "^3.0" }
whirlpool-cpi = { git = "https://github.com/orca-so/whirlpool-cpi.git", branch = "anchor/0.30.1" }
position = { path = "../programs/position" }
