[package]
name = "position"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "position"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"
raydium-clmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi.git", package = "raydium-clmm-cpi", branch = "anchor-0.29.0" }
